# snipvault

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  history.md  install.ps1  install.sh  pyproject.toml  snipvault-docs.md  uninstall.ps1  uninstall.sh
.claude/: settings.json
.claude/agents/: test-guardian.md
.claude/hooks/: protect_vault.py
.claude/skills/add-command/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.githooks/: pre-commit
.github/workflows/: release.yml  test.yml
packaging/: entry.py
scripts/: backfill-release-notes.ps1
snipvault/: __init__.py  cli.py  sessions.py  storage.py
tests/: test_cli.py  test_sessions.py  test_storage.py
website/: package-lock.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/components/: CopyCommand.tsx  FeatureIcon.tsx  Features.tsx  Footer.tsx  Hero.tsx  Install.tsx  InstallTabs.tsx  Logo.tsx  Nav.tsx  OsDownload.tsx  TerminalDemo.tsx  Usage.tsx  useOs.ts
website/app/lib/: releases.ts  site.ts
website/app/versions/: page.tsx
