[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snipvault"
version = "0.2.2"
description = "A tiny, dependency-free command-line code-snippet manager"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
snipvault = "snipvault.cli:main"

[tool.setuptools]
packages = ["snipvault"]
